--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "barvers",
-    "version": "0.0.1",
-    "description": "Web service for barber's based on WeChat.",
-    "dependencies": {
-        "xml2js": "0.4.17"
+    "name":"barvers",
+    "version":"0.0.1",
+    "description":"Web service for barber's based on WeChat.",
+    "dependencies":{
+        "xml2js":"0.4.17",
+        "connect":"3.6.2"
     }
 }
