--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dependencies": {
         "body-parser": "1.17.2",
         "connect": "3.6.2",
-        "weui": "^1.1.2",
-        "xml2js": "0.4.17",
+        "ejs": "^2.5.6",
         "express": "4.15.3",
-        "socket.io": "2.0.3"
+        "socket.io": "2.0.3",
+        "weui": "^1.1.2",
+        "xml2js": "0.4.17"
     }
 }
